// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frontend/components/terrain/buildings/FactoryPurchaseDialog component renders correctly; AIR 1`] = `
<Dialog
  className="default"
  onClose={[Function]}
>
  <div
    className="land-factory-purchase-dialog"
  >
    <div
      className="purchase-unit"
      key="purchase-unit-BOMBER"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        BOMBER
      </Button>
    </div>
    <div
      className="purchase-unit"
      key="purchase-unit-JET"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        JET
      </Button>
    </div>
    <div
      className="purchase-unit"
      key="purchase-unit-HELICOPTER"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        HELICOPTER
      </Button>
    </div>
  </div>
</Dialog>
`;

exports[`frontend/components/terrain/buildings/FactoryPurchaseDialog component renders correctly; LAND 1`] = `
<Dialog
  className="default"
  onClose={[Function]}
>
  <div
    className="land-factory-purchase-dialog"
  >
    <div
      className="purchase-unit"
      key="purchase-unit-SOLDIER"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        SOLDIER
      </Button>
    </div>
    <div
      className="purchase-unit"
      key="purchase-unit-SMALL_TANK"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        SMALL_TANK
      </Button>
    </div>
    <div
      className="purchase-unit"
      key="purchase-unit-PERSONNEL_CARRIER"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        PERSONNEL_CARRIER
      </Button>
    </div>
    <div
      className="purchase-unit"
      key="purchase-unit-MEDIUM_TANK"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        MEDIUM_TANK
      </Button>
    </div>
    <div
      className="purchase-unit"
      key="purchase-unit-ARTILLERY"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        ARTILLERY
      </Button>
    </div>
    <div
      className="purchase-unit"
      key="purchase-unit-ANTI_AIR"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        ANTI_AIR
      </Button>
    </div>
  </div>
</Dialog>
`;

exports[`frontend/components/terrain/buildings/FactoryPurchaseDialog component renders correctly; SEA 1`] = `
<Dialog
  className="default"
  onClose={[Function]}
>
  <div
    className="land-factory-purchase-dialog"
  >
    <div
      className="purchase-unit"
      key="purchase-unit-CARRIER"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        CARRIER
      </Button>
    </div>
    <div
      className="purchase-unit"
      key="purchase-unit-DESTROYER"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        DESTROYER
      </Button>
    </div>
    <div
      className="purchase-unit"
      key="purchase-unit-SUBMARINE"
    >
      <Button
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
      >
        SUBMARINE
      </Button>
    </div>
  </div>
</Dialog>
`;
